--- a/src/Frontend/AdminDashboard/package.json
+++ b/src/Frontend/AdminDashboard/package.json
@@ -2,6 +2,7 @@
   "name": "batuara-admin-dashboard",
   "version": "1.0.0",
   "private": true,
+  "homepage": "/batuara-admin/",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -52,6 +53,5 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.5.1",
     "sass": "^1.90.0"
-  },
-  "proxy": "http://localhost:3003"
+  }
 }
