--- a/src/Frontend/PublicWebsite/package.json
+++ b/src/Frontend/PublicWebsite/package.json
@@ -2,6 +2,7 @@
   "name": "public-website",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/batuara-public/",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
