fix: correct relative paths for docker build context

--- a/scripts/docker/docker-compose.production.yml
+++ b/scripts/docker/docker-compose.production.yml
@@ -6,7 +6,7 @@ version: '3.3'
 services:
   publicwebsite:
     build:
-      context: ./src/Frontend/PublicWebsite
+      context: ../../../src/Frontend/PublicWebsite
       dockerfile: ../../../Dockerfile.frontend
       args:
         - REACT_APP_API_URL=${REACT_APP_API_URL:-http://localhost:3003}
@@ -34,7 +34,7 @@ services:
 
   admindashboard:
     build:
-      context: ./src/Frontend/AdminDashboard
+      context: ../../../src/Frontend/AdminDashboard
       dockerfile: ../../../Dockerfile.frontend
       args:
         - REACT_APP_API_URL=${REACT_APP_API_URL:-/batuara-api}
