fix: refactor dockerfile to be generic and support subpaths for logo fix

--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -3,21 +3,23 @@ FROM node:20-alpine AS build
 
 WORKDIR /app
 
+# Argumento para o caminho da aplicação (ex: src/Frontend/PublicWebsite)
+ARG APP_PATH
+# Argumento para URL da API
+ARG REACT_APP_API_URL
+ENV REACT_APP_API_URL=${REACT_APP_API_URL}
+
 # Copia arquivos de dependências
-COPY src/Frontend/PublicWebsite/package*.json ./
+COPY ${APP_PATH}/package*.json ./
 
 # Instala dependências
 RUN npm ci --only=production
 
 # Copia código fonte
-COPY src/Frontend/PublicWebsite/ ./
+COPY ${APP_PATH}/ ./
 
 # Debug: Verificar estrutura copiada
 RUN echo "=== ESTRUTURA COPIADA ===" && ls -la && echo "=== PUBLIC FOLDER ===" && ls -la public/ || echo "Public folder not found"
-
-# Argumento para URL da API
-ARG REACT_APP_API_URL
-ENV REACT_APP_API_URL=${REACT_APP_API_URL}
 
 # Build da aplicação
 RUN npm run build
@@ -25,26 +27,29 @@ RUN npm run build
 # Copiar assets críticos para a raiz do build
 RUN echo "=== COPIANDO ASSETS CRÍTICOS ===" && \
     if [ -f "public/batuara_logo.png" ]; then \
-        cp public/batuara_logo.png build/batuara_logo.png; \
-        echo "✅ Logo copiado para build/batuara_logo.png"; \
+    cp public/batuara_logo.png build/batuara_logo.png; \
+    echo "✅ Logo copiado para build/batuara_logo.png"; \
     else \
-        echo "❌ Logo não encontrado em public/batuara_logo.png"; \
+    echo "❌ Logo não encontrado em public/batuara_logo.png"; \
     fi && \
     if [ -f "public/favicon.ico" ]; then \
-        cp public/favicon.ico build/favicon.ico; \
-        echo "✅ Favicon.ico copiado para build/favicon.ico"; \
+    cp public/favicon.ico build/favicon.ico; \
+    echo "✅ Favicon.ico copiado para build/favicon.ico"; \
     else \
-        echo "❌ Favicon.ico não encontrado em public/favicon.ico"; \
+    echo "❌ Favicon.ico não encontrado em public/favicon.ico"; \
     fi && \
     if [ -f "public/favicon.png" ]; then \
-        cp public/favicon.png build/favicon.png; \
-        echo "✅ Favicon.png copiado para build/favicon.png"; \
+    cp public/favicon.png build/favicon.png; \
+    echo "✅ Favicon.png copiado para build/favicon.png"; \
     else \
-        echo "⚠️ Favicon.png não encontrado em public/favicon.png"; \
+    echo "⚠️ Favicon.png não encontrado em public/favicon.png"; \
     fi
 
 # Estágio de produção
 FROM nginx:stable-alpine
+
+# Argumento para o caminho base da web (ex: /batuara-public)
+ARG WEB_BASE_PATH=/
 
 # Copia arquivos buildados
 COPY --from=build /app/build /usr/share/nginx/html
@@ -54,70 +59,89 @@ RUN echo "=== VERIFICANDO ASSETS CRÍTICOS ===" && \
     ls -la /usr/share/nginx/html/ && \
     echo "=== VERIFICANDO FAVICON ===" && \
     if [ -f "/usr/share/nginx/html/favicon.ico" ]; then \
-        echo "✅ favicon.ico encontrado"; \
-        ls -la /usr/share/nginx/html/favicon.ico; \
+    echo "✅ favicon.ico encontrado"; \
+    ls -la /usr/share/nginx/html/favicon.ico; \
     else \
-        echo "❌ favicon.ico NÃO encontrado"; \
+    echo "❌ favicon.ico NÃO encontrado"; \
     fi && \
     echo "=== VERIFICANDO LOGO ===" && \
     if [ -f "/usr/share/nginx/html/batuara_logo.png" ]; then \
-        echo "✅ batuara_logo.png encontrado"; \
-        ls -la /usr/share/nginx/html/batuara_logo.png; \
+    echo "✅ batuara_logo.png encontrado"; \
+    ls -la /usr/share/nginx/html/batuara_logo.png; \
     else \
-        echo "❌ batuara_logo.png NÃO encontrado"; \
+    echo "❌ batuara_logo.png NÃO encontrado"; \
     fi
 
 # Criar configuração nginx otimizada
 RUN echo 'server {' > /etc/nginx/conf.d/default.conf && \
     echo '    listen 80;' >> /etc/nginx/conf.d/default.conf && \
     echo '    server_name localhost;' >> /etc/nginx/conf.d/default.conf && \
+    echo '' >> /etc/nginx/conf.d/default.conf && \
+    # Lógica para definir root ou alias baseado no WEB_BASE_PATH
+    if [ "$WEB_BASE_PATH" = "/" ]; then \
     echo '    root /usr/share/nginx/html;' >> /etc/nginx/conf.d/default.conf && \
-    echo '    index index.html;' >> /etc/nginx/conf.d/default.conf && \
-    echo '' >> /etc/nginx/conf.d/default.conf && \
-    echo '    # Configuração específica para favicon.ico' >> /etc/nginx/conf.d/default.conf && \
-    echo '    location = /favicon.ico {' >> /etc/nginx/conf.d/default.conf && \
-    echo '        try_files $uri =404;' >> /etc/nginx/conf.d/default.conf && \
-    echo '        expires 1y;' >> /etc/nginx/conf.d/default.conf && \
-    echo '        add_header Cache-Control "public, immutable";' >> /etc/nginx/conf.d/default.conf && \
-    echo '        add_header Content-Type "image/x-icon";' >> /etc/nginx/conf.d/default.conf && \
-    echo '        access_log off;' >> /etc/nginx/conf.d/default.conf && \
-    echo '    }' >> /etc/nginx/conf.d/default.conf && \
-    echo '' >> /etc/nginx/conf.d/default.conf && \
-    echo '    # Configuração específica para logo' >> /etc/nginx/conf.d/default.conf && \
-    echo '    location = /batuara_logo.png {' >> /etc/nginx/conf.d/default.conf && \
-    echo '        try_files $uri =404;' >> /etc/nginx/conf.d/default.conf && \
-    echo '        expires 1y;' >> /etc/nginx/conf.d/default.conf && \
-    echo '        add_header Cache-Control "public, immutable";' >> /etc/nginx/conf.d/default.conf && \
-    echo '        add_header Content-Type "image/png";' >> /etc/nginx/conf.d/default.conf && \
-    echo '        access_log off;' >> /etc/nginx/conf.d/default.conf && \
-    echo '    }' >> /etc/nginx/conf.d/default.conf && \
-    echo '' >> /etc/nginx/conf.d/default.conf && \
-    echo '    # Configuração para assets estáticos' >> /etc/nginx/conf.d/default.conf && \
-    echo '    location ~* \.(png|jpg|jpeg|gif|ico|svg|css|js|woff|woff2|ttf|eot)$ {' >> /etc/nginx/conf.d/default.conf && \
-    echo '        try_files $uri =404;' >> /etc/nginx/conf.d/default.conf && \
-    echo '        expires 1y;' >> /etc/nginx/conf.d/default.conf && \
-    echo '        add_header Cache-Control "public, immutable";' >> /etc/nginx/conf.d/default.conf && \
-    echo '        access_log off;' >> /etc/nginx/conf.d/default.conf && \
-    echo '    }' >> /etc/nginx/conf.d/default.conf && \
-    echo '' >> /etc/nginx/conf.d/default.conf && \
-    echo '    # Configuração para arquivos estáticos do build' >> /etc/nginx/conf.d/default.conf && \
-    echo '    location /static/ {' >> /etc/nginx/conf.d/default.conf && \
-    echo '        try_files $uri =404;' >> /etc/nginx/conf.d/default.conf && \
-    echo '        expires 1y;' >> /etc/nginx/conf.d/default.conf && \
-    echo '        add_header Cache-Control "public, immutable";' >> /etc/nginx/conf.d/default.conf && \
-    echo '        access_log off;' >> /etc/nginx/conf.d/default.conf && \
-    echo '    }' >> /etc/nginx/conf.d/default.conf && \
-    echo '' >> /etc/nginx/conf.d/default.conf && \
-    echo '    # Configuração para SPA (deve ser a última)' >> /etc/nginx/conf.d/default.conf && \
     echo '    location / {' >> /etc/nginx/conf.d/default.conf && \
-    echo '        try_files $uri $uri/ /index.html;' >> /etc/nginx/conf.d/default.conf && \
+    echo '        try_files $uri $uri/ /index.html;' >> /etc/nginx/conf.d/default.conf; \
+    else \
+    echo "    location $WEB_BASE_PATH/ {" >> /etc/nginx/conf.d/default.conf && \
+    echo '        alias /usr/share/nginx/html/;' >> /etc/nginx/conf.d/default.conf && \
+    echo "        try_files \$uri \$uri/ $WEB_BASE_PATH/index.html;" >> /etc/nginx/conf.d/default.conf; \
+    fi && \
     echo '        expires -1;' >> /etc/nginx/conf.d/default.conf && \
     echo '        add_header Cache-Control "no-cache, no-store, must-revalidate";' >> /etc/nginx/conf.d/default.conf && \
     echo '    }' >> /etc/nginx/conf.d/default.conf && \
+    echo '' >> /etc/nginx/conf.d/default.conf && \
+    # Configuração para assets estáticos (genérica)
+    if [ "$WEB_BASE_PATH" = "/" ]; then \
+    echo '    location ~* \.(png|jpg|jpeg|gif|ico|svg|css|js|woff|woff2|ttf|eot)$ {' >> /etc/nginx/conf.d/default.conf; \
+    else \
+    echo "    location ~* ^$WEB_BASE_PATH/.*\.(png|jpg|jpeg|gif|ico|svg|css|js|woff|woff2|ttf|eot)$ {" >> /etc/nginx/conf.d/default.conf; \
+    fi && \
+    echo '        root /usr/share/nginx/html;' >> /etc/nginx/conf.d/default.conf && \
+    # Se usar alias, o root deve ser ajustado ou usar rewrite. Com alias e regex é complexo.
+    # Simplificação: Servir assets via try_files no bloco principal ou confiar no alias do bloco principal se a regex não casar.
+    # Mas regex tem prioridade.
+    # Vamos simplificar: remover o bloco de assets regex específico se usarmos subpath, 
+    # pois o bloco principal com alias já deve servir os arquivos se eles existirem.
+    # Mas queremos headers de cache.
+    # Melhor estratégia para subpath: location ~* ... dentro do location base? Não suportado.
+    # Vamos manter simples: Cache headers no bloco principal para tudo.
+    echo '    }' >> /etc/nginx/conf.d/default.conf && \
     echo '}' >> /etc/nginx/conf.d/default.conf
 
-# Verificar se a configuração foi criada corretamente
-RUN echo "=== CONFIGURAÇÃO NGINX CRIADA ===" && cat /etc/nginx/conf.d/default.conf
+# Recriando o comando de geração do Nginx para ser mais robusto e simples
+RUN echo 'server {' > /etc/nginx/conf.d/default.conf && \
+    echo '    listen 80;' >> /etc/nginx/conf.d/default.conf && \
+    echo '    server_name localhost;' >> /etc/nginx/conf.d/default.conf && \
+    echo '' >> /etc/nginx/conf.d/default.conf && \
+    if [ "$WEB_BASE_PATH" = "/" ]; then \
+    echo '    root /usr/share/nginx/html;' >> /etc/nginx/conf.d/default.conf && \
+    echo '    location / {' >> /etc/nginx/conf.d/default.conf && \
+    echo '        try_files $uri $uri/ /index.html;' >> /etc/nginx/conf.d/default.conf && \
+    echo '    }' >> /etc/nginx/conf.d/default.conf; \
+    else \
+    echo "    location $WEB_BASE_PATH/ {" >> /etc/nginx/conf.d/default.conf && \
+    echo '        alias /usr/share/nginx/html/;' >> /etc/nginx/conf.d/default.conf && \
+    echo "        try_files \$uri \$uri/ $WEB_BASE_PATH/index.html;" >> /etc/nginx/conf.d/default.conf && \
+    echo '    }' >> /etc/nginx/conf.d/default.conf; \
+    fi && \
+    echo '' >> /etc/nginx/conf.d/default.conf && \
+    echo '    # Cache control global' >> /etc/nginx/conf.d/default.conf && \
+    echo '    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {' >> /etc/nginx/conf.d/default.conf && \
+    if [ "$WEB_BASE_PATH" != "/" ]; then \
+    # Para subpath, precisamos de um rewrite ou alias trick se quisermos match global
+    # Mas como os assets são pedidos com o prefixo, podemos usar o alias
+    echo "        alias /usr/share/nginx/html/;" >> /etc/nginx/conf.d/default.conf; \
+    else \
+    echo "        root /usr/share/nginx/html;" >> /etc/nginx/conf.d/default.conf; \
+    fi && \
+    echo '        expires 1y;' >> /etc/nginx/conf.d/default.conf && \
+    echo '        add_header Cache-Control "public, immutable";' >> /etc/nginx/conf.d/default.conf && \
+    echo '    }' >> /etc/nginx/conf.d/default.conf && \
+    echo '}' >> /etc/nginx/conf.d/default.conf
+
+# Verificar configuração final
+RUN echo "=== CONFIGURAÇÃO NGINX FINAL ===" && cat /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 
