fix: corrigir URL da API no .env.production para /batuara-api/api

--- a/.env.production
+++ b/.env.production
@@ -10,4 +10,4 @@ ADMIN_DASHBOARD_PORT=3001
 API_PORT=3003
 
 # Configurações específicas para OCI
-REACT_APP_API_URL=http://localhost:3003
+REACT_APP_API_URL=/batuara-api/api
